--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
 <body>
 
   <h1>About</h1>
-  <h2>Revision One</h2>
-  <p>The five boxing wizards jump quickly</p>
+  <h2>Revision two</h2>
+  <p>The three read car on race track</p>
 
 </body>
 </html>
